[package]
name = "sqs-replay-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
sqs = { package = "aws-sdk-sqs", git = "https://github.com/awslabs/aws-sdk-rust" }
tokio = { version = "1", features = ["full"] }
aws-config = { package = "aws-config", git = "https://github.com/awslabs/aws-sdk-rust" }
tracing-subscriber = "0.2.18"
async-trait = "0.1.51"
futures = "0.3"