[package]
name = "sqs-replay"
version = "0.10.0"
authors = ["Carmine DiMascio <cdimascio@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to replay SQS messages"
readme = "README.md"
homepage = "https://github.com/cdimascio/sqs-replay"
repository ="https://github.com/cdimascio/sqs-replay"
keywords = ["cli", "sqs", "replay", "dlq"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = { version ="3.0.0-beta.4", features=["yaml"] }
termion = "*"
sqs = { package = "aws-sdk-sqs", git = "https://github.com/awslabs/aws-sdk-rust" }
tokio = { version = "1", features = ["full"] }
aws-config = { package = "aws-config", git = "https://github.com/awslabs/aws-sdk-rust" }
tracing-subscriber = "0.2.18"
regex = "1.5"
async-trait = "0.1.51"
futures = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
